# recursive-rag

./: .gitignore  AGENTS.md  README.md  data  pyproject.toml
compiled/: base_method_forcehard_nocritic_20260504.json  gepa_smoke_20260503.json  gepa_smoke_20260503_rerun.json  gepa_v3_recovered_cand13.json  gepa_v4.json  gepa_v4_seed_bridge.json  gepa_v4_seed_query.json  grpo_v4_cand13_library_epoch0_batch3_snapshot.json  grpo_v4_cand13_library_epoch0_batch3_snapshot.txt  strat100_E_manual.txt
docs/: architecture.md
reproduction/hera/: pyproject.toml
reproduction/hera/data/: train_240.jsonl
reproduction/hera/data/annotations/: annot_test_2wikimultihop.jsonl  annot_test_bamboogle.jsonl
reproduction/hera/jobs/: hera_v2_eval_only.job
reproduction/hera/results/v1_reference/exp_lib_run01/: prompts.json  train_log.jsonl
reproduction/hera/results/v1_reference/run01_eval/: aggregate.json  summary_musique.json
reproduction/hera/scripts/: build_train_set.py  eval.py  run_all_eval.sh  snellius_retriever_server.py  train.py
reproduction/hera/src/hera/: __init__.py  agents.py  grpo.py  lm.py  orchestrator.py
reproduction/hera/wandb/run-20260506_152634-gi8fkmvh/: run-gi8fkmvh.wandb
reproduction/hera/wandb/run-20260506_170517-mqdyzqqn/files/: wandb-metadata.json
reproduction/hera/wandb/run-20260506_170517-mqdyzqqn/files/code/scripts/: eval.py
reproduction/hera/wandb/run-20260506_170517-tdxab1i0/files/: wandb-metadata.json
reproduction/hera/wandb/run-20260506_170517-tf2hdze7/: run-tf2hdze7.wandb
reproduction/hera/wandb/run-20260506_170517-tf2hdze7/files/: wandb-summary.json
reproduction/hera/wandb/run-20260506_170517-yys94s9t/files/: config.yaml  wandb-summary.json
(+890 files in other folders)
