[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive-rag"
version = "0.1.0"
description = "Force-hard no-critic recursive multi-agent RAG baseline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dspy>=3.0.0", "httpx>=0.27.0", "pydantic>=2.0.0", "tqdm>=4.66.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
